Fixes issues with ImagePullCredential
